--- a/templates/notes.html
+++ b/templates/notes.html
@@ -21,8 +21,65 @@
 
 <body>
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand">Sticky <span class="badge bg-warning text-dark">Notes</span> Beta TM</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            USERNAME
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="#">Logout</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
+
     <div class="container overflow-hidden">
-        <div id="row1" class="row row-cols-auto vcenter gy-5 justify-content-md-center"></div>
+        <div id="row1" class="row row-cols-auto vcenter gy-5 justify-content-md-center">
+            <div class="col-3">
+                <div class="card" style="width: 18rem; text-align: center;">
+                    <div class="card-body">
+                      <h5 class="card-title">Something on your mind?</h5>
+                      <p class="card-text">Then why not write it down? Look here's so much space. Just klick the button below!</p>
+                      <footer class="blockquote-footer">Someone famous <cite title="Source Title">Sticky Notes TM</cite></footer>
+                      <a href="#" class="btn btn-primary">Add new Note</a>
+                    </div>
+                  </div>
+            </div>
+
+            <div class="col-3">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item">An item</li>
+                      <li class="list-group-item">A second item</li>
+                      <li class="list-group-item">A third item</li>
+                    </ul>
+                    <div class="card-body">
+                      <a href="#" class="card-link">Card link</a>
+                      <a href="#" class="card-link">Another link</a>
+                    </div>
+                  </div>
+            </div>
+
+        </div>
     </div>
 
     <!-- Modal -->
@@ -33,12 +90,13 @@
                     <h5 class="modal-title" id="exampleModalLabel">You're about to open a door!</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <form id="openDoorForm" method="POST", action="/backend/modItem.php">
+                <form id="openDoorForm" method="POST" , action="/backend/modItem.php">
                     <div class="modal-body">
                         <div class="form-check">
                             <p>You've picked door #<span id="doorNum"></span>.</p>
 
-                            <input class="form-check-input" type="checkbox" value="Yes" id="flexCheckDefault" name="reveal">
+                            <input class="form-check-input" type="checkbox" value="Yes" id="flexCheckDefault"
+                                name="reveal">
                             <label class="form-check-label" for="flexCheckDefault">
                                 Do you want to know what's behind the door?
                             </label>
