--- a/templates/notes.html
+++ b/templates/notes.html
@@ -30,20 +30,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            USERNAME
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Logout</a></li>
-                        </ul>
-                    </li>
                 </ul>
             </div>
             <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <input class="form-control me-2 disabled" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success disabled" type="submit">Search</button>
             </form>
         </div>
     </nav>
@@ -51,63 +42,67 @@
     <div class="container overflow-hidden">
         <div id="row1" class="row row-cols-auto vcenter gy-5 justify-content-md-center">
             <div class="col-3">
-                <div class="card" style="width: 18rem; text-align: center;">
+                <div class="card special-card" style="width: 18rem; text-align: center;">
                     <div class="card-body">
-                      <h5 class="card-title">Something on your mind?</h5>
-                      <p class="card-text">Then why not write it down? Look here's so much space. Just klick the button below!</p>
-                      <footer class="blockquote-footer">Someone famous <cite title="Source Title">Sticky Notes TM</cite></footer>
-                      <a href="#" class="btn btn-primary">Add new Note</a>
+                        <h5 class="card-title">Something on your mind?</h5>
+                        <p class="card-text">Then why not write it down? Look here's so much space. Just klick the
+                            button below!</p>
+                        <footer class="blockquote-footer">Someone famous <cite title="Source Title">Sticky Notes
+                                TM</cite></footer>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newNote">
+                            Add new Note
+                        </button>
                     </div>
-                  </div>
+                </div>
             </div>
 
             <div class="col-3">
                 <div class="card" style="width: 18rem;">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
                     </div>
-                    <ul class="list-group list-group-flush">
-                      <li class="list-group-item">An item</li>
-                      <li class="list-group-item">A second item</li>
-                      <li class="list-group-item">A third item</li>
-                    </ul>
                     <div class="card-body">
-                      <a href="#" class="card-link">Card link</a>
-                      <a href="#" class="card-link">Another link</a>
+                        <a href="#" class="card-link">Edit</a>
+                        <a href="#" class="card-link">Delete</a>
                     </div>
-                  </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                    </div>
+                </div>
             </div>
 
         </div>
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="newNote" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">You're about to open a door!</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Write something down, young padawan.</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <form id="openDoorForm" method="POST" , action="/backend/modItem.php">
                     <div class="modal-body">
                         <div class="form-check">
-                            <p>You've picked door #<span id="doorNum"></span>.</p>
+                            <div class="input-group mb-3">
+                                <span class="input-group-text" id="inputGroup-sizing-default">Note Title</span>
+                                <input type="text" class="form-control" aria-label="Sizing example input"
+                                    aria-describedby="inputGroup-sizing-default">
+                            </div>
 
-                            <input class="form-check-input" type="checkbox" value="Yes" id="flexCheckDefault"
-                                name="reveal">
-                            <label class="form-check-label" for="flexCheckDefault">
-                                Do you want to know what's behind the door?
-                            </label>
+                            <div class="input-group">
+                                <textarea class="form-control" aria-label="With textarea"></textarea>
+                            </div>
 
                             <input type="text" name="itemID" value="" id="idField" hidden="true">
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">I changed my
-                            mind</button>
-                        <button type="submit" class="btn btn-primary">Open</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary">Save</button>
                     </div>
                 </form>
             </div>
