--- a/templates/notes.html
+++ b/templates/notes.html
@@ -21,6 +21,7 @@
 
 <body>
 
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand">Sticky <span class="badge bg-warning text-dark">Notes</span> Beta TM</a>
@@ -32,15 +33,14 @@
                 <ul class="navbar-nav">
                 </ul>
             </div>
-            <form class="d-flex">
-                <input class="form-control me-2 disabled" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success disabled" type="submit">Search</button>
-            </form>
         </div>
     </nav>
 
+    <!-- Main Container -->
     <div class="container overflow-hidden">
         <div id="row1" class="row row-cols-auto vcenter gy-5 justify-content-md-center">
+
+            <!-- Default Card (Add Note) -->
             <div class="col-3">
                 <div class="card special-card" style="width: 18rem; text-align: center;">
                     <div class="card-body">
@@ -56,6 +56,7 @@
                 </div>
             </div>
 
+            <!-- Display Cards passed to template -->
             {% for card in cards %}
             <div class="col-3">
                 <div class="card" style="width: 18rem;">
@@ -76,7 +77,7 @@
         </div>
     </div>
 
-    <!-- Modal -->
+    <!-- Modal for editing text in note -->
     <div class="modal fade" id="newNote" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
